; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/nodes/extr_readfuncs.c_ReadCommonPlan.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/nodes/extr_readfuncs.c_ReadCommonPlan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@startup_cost = common dso_local global i32 0, align 4
@total_cost = common dso_local global i32 0, align 4
@plan_rows = common dso_local global i32 0, align 4
@plan_width = common dso_local global i32 0, align 4
@parallel_aware = common dso_local global i32 0, align 4
@parallel_safe = common dso_local global i32 0, align 4
@plan_node_id = common dso_local global i32 0, align 4
@targetlist = common dso_local global i32 0, align 4
@qual = common dso_local global i32 0, align 4
@lefttree = common dso_local global i32 0, align 4
@righttree = common dso_local global i32 0, align 4
@initPlan = common dso_local global i32 0, align 4
@extParam = common dso_local global i32 0, align 4
@allParam = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @ReadCommonPlan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ReadCommonPlan(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i32 (...) @READ_TEMP_LOCALS()
  %4 = load i32, i32* @startup_cost, align 4
  %5 = call i32 @READ_FLOAT_FIELD(i32 %4)
  %6 = load i32, i32* @total_cost, align 4
  %7 = call i32 @READ_FLOAT_FIELD(i32 %6)
  %8 = load i32, i32* @plan_rows, align 4
  %9 = call i32 @READ_FLOAT_FIELD(i32 %8)
  %10 = load i32, i32* @plan_width, align 4
  %11 = call i32 @READ_INT_FIELD(i32 %10)
  %12 = load i32, i32* @parallel_aware, align 4
  %13 = call i32 @READ_BOOL_FIELD(i32 %12)
  %14 = load i32, i32* @parallel_safe, align 4
  %15 = call i32 @READ_BOOL_FIELD(i32 %14)
  %16 = load i32, i32* @plan_node_id, align 4
  %17 = call i32 @READ_INT_FIELD(i32 %16)
  %18 = load i32, i32* @targetlist, align 4
  %19 = call i32 @READ_NODE_FIELD(i32 %18)
  %20 = load i32, i32* @qual, align 4
  %21 = call i32 @READ_NODE_FIELD(i32 %20)
  %22 = load i32, i32* @lefttree, align 4
  %23 = call i32 @READ_NODE_FIELD(i32 %22)
  %24 = load i32, i32* @righttree, align 4
  %25 = call i32 @READ_NODE_FIELD(i32 %24)
  %26 = load i32, i32* @initPlan, align 4
  %27 = call i32 @READ_NODE_FIELD(i32 %26)
  %28 = load i32, i32* @extParam, align 4
  %29 = call i32 @READ_BITMAPSET_FIELD(i32 %28)
  %30 = load i32, i32* @allParam, align 4
  %31 = call i32 @READ_BITMAPSET_FIELD(i32 %30)
  ret void
}

declare dso_local i32 @READ_TEMP_LOCALS(...) #1

declare dso_local i32 @READ_FLOAT_FIELD(i32) #1

declare dso_local i32 @READ_INT_FIELD(i32) #1

declare dso_local i32 @READ_BOOL_FIELD(i32) #1

declare dso_local i32 @READ_NODE_FIELD(i32) #1

declare dso_local i32 @READ_BITMAPSET_FIELD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
